=== master

* Support :in_arrays option for Postgres::JSON{,B}#strip_nulls in pg_json_ops extension on PostgreSQL 18+ (jeremyevans)

* Support VIRTUAL generated columns on PostgreSQL 18+ using :virtual option (jeremyevans)

=== 5.95.1 (2025-08-05)

* Fix regression in 5.95.0 where :deferred would be ignored for unique and primary key constraints on PostgreSQL (jeremyevans) (#2321)

=== 5.95.0 (2025-08-01)

* Support num_waiting for the timed_queue and shared_timed_queue connection pools (jeremyevans)

* Add class_table_inheritance_constraint_validations plugin, supporting constraint validations for all of the model's tables (sterlzbd, jeremyevans) (#2316, #2319)

* Support :no_inherit option for CHECK constraints on PostgreSQL 9.2+ (jeremyevans)

* Support :no_inherit option for NOT NULL constraints on PostgreSQL 18+ (jeremyevans)

* Support not_null: {name: "constaint_name"} column option for naming NOT NULL constraints on PostgreSQL 18+ (jeremyevans)

* Support :period foreign_key option for PERIOD on PostgreSQL 18+ (jeremyevans)

* Support :include unique/primary_key/exclude option for INCLUDE on PostgreSQL 11+ (jeremyevans)

* Support :nulls_not_distinct unique option for NULLS NOT DISTINCT on PostgreSQL 15+ (jeremyevans)

* Support :without_overlaps primary_key and unique option for WITHOUT OVERLAPS on PostgreSQL 18+ (jeremyevans)

=== 5.94.0 (2025-07-01)

* Support ALTER TABLE ALTER CONSTRAINT on PostgreSQL using alter_table alter_constraint method (jeremyevans)

* Add Dataset#for_no_key_update and #for_key_share on PostgreSQL (jeremyevans)

* Cache Dataset#nolock on Microsoft SQL Server (jeremyevans)

* Cache Dataset#for_share on PostgreSQL and MySQL (jeremyevans)

* Include :validated and :enforced entries for Database#check_constraints on PostgreSQL (jeremyevans)

* Include :validated and :enforced entries for Database#{,reversed_}foreign_key_list on PostgreSQL (jeremyevans)
